# particle-system-opengl-cuda

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.bat  build.sh
assets/kernels/: particle.cu
assets/shaders/particles/: compute.glsl  vertex.glsl
assets/shaders/test/: fragment.glsl  vertex.glsl
include/: Application.hpp  BufferObject.hpp  Camera.hpp  Color.hpp  CudaComputeManager.hpp  ImGuiLayer.hpp  InputHandler.hpp  ParticleSystem.hpp  ParticleTypes.hpp  ProgramConfig.hpp  Random.hpp  Renderer.hpp  Shader.hpp  Timer.hpp  VertexArrayObject.hpp  Window.hpp  gl_common.hpp  utils.hpp
include/cuda/: float3_utils.cuh  operator.cuh  particle.cuh  perlin.cuh
shaders/cursor/: fragment.glsl  vertex.glsl
shaders/particles/: fragment.glsl  vertex.glsl
src/: Application.cpp  Camera.cpp  Color.cpp  ImGuiLayer.cpp  InputHandler.cpp  ParticleSystem.cpp  ProgramConfig.cpp  Random.cpp  Renderer.cpp  Shader.cpp  Timer.cpp  Window.cpp  main.cpp  utils.cpp
src/cuda/: particle.cu  perlin.cu
src/glad/: glad.c  glad.h
